fix(components): fix overflow for title in BlogPostsList for Blog

--- a/src/components/pages/blog/blog-posts-list/item/item.module.scss
+++ b/src/components/pages/blog/blog-posts-list/item/item.module.scss
@@ -54,11 +54,11 @@
 }
 
 .title {
+  display: -webkit-box;
   margin-bottom: 15px;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .text {
